adding solution with suggested changes